# citerag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dependencies.py  main.py  schemas.py  settings.py
app/core/: exceptions.py  observability.py  tracing.py
app/parsers/: __init__.py  base_parser.py  docx_parser.py  html_parser.py  parser_factory.py  pdf_parser.py  text_parser.py
app/providers/: embedding_provider.py  llm_provider.py  rerank_provider.py
app/repositories/: file_repository.py  index_repository.py  sqlite_repository.py  vector_repository.py
app/routers/: health.py  index.py  qa.py  upload.py
app/services/: file_service.py  index_service.py  qa_service.py  retrieval_service.py
app/test_docs/: sam.html  sample.docx  sample.html
app/tools/: preview.py
evals/: retrieval_eval_cases.json  retrieval_eval_report.md  retrieval_eval_results.json
frontend/: index.html
scripts/: run_retrieval_eval.py
tests/: test_qa_citations.py  test_question_type_tuning.py
