[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "citerag"
version = "0.1.0"
description = "A lightweight Retrieval-Augmented Generation (RAG) backend built with FastAPI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ZQY" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "rank-bm25>=0.2.2",
  "openai>=1.0.0",
  "python-dotenv>=1.0.1",
  "pypdf>=6.0.0",
  "python-docx>=1.2.0",
  "beautifulsoup4>=4.12.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "README.md",
  "pyproject.toml",
]